camel case issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,8 @@ spring.application.name=employeecrud
 spring.datasource.url=jdbc:postgresql://localhost:5434/employee_Database
 spring.datasource.username=root
 spring.datasource.password=root
-
-# JPA (Hibernate) Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-# Connection Pool Configuration (optional, recommended for production)
-spring.sql.init.mode=always
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8081
 
 
